--- a/assets/association/templates/admin/dashboard/welcome.html
+++ b/assets/association/templates/admin/dashboard/welcome.html
@@ -3,6 +3,7 @@
 
 {% block content %}
   <div id="content-main">
+    {% include "admin/dashboard/includes/_welcome_dashboard.html" %}
   </div>
 {% endblock %}
 
