--- a/assets/association/templates/admin/base_site.html
+++ b/assets/association/templates/admin/base_site.html
@@ -15,9 +15,9 @@
 
 
 {# Additional JS files in footer, right before </body> #}
-{#{% block extrajs %}#}
-{#  <script type="text/javascript" src="{% static 'js/my_project.js' %}"></script>#}
-{#{% endblock %}#}
+{% block extrajs %}
+  <script type="text/javascript" src="{% static 'javascript/highcharts.js' %}"></script>
+{% endblock %}
 
 
 {# Footer links (left side) #}
