--- a/assets/association/templates/admin/dashboard/includes/_welcome_dashboard.html
+++ b/assets/association/templates/admin/dashboard/includes/_welcome_dashboard.html
@@ -1,38 +1,78 @@
-{% load i18n admin_static %}
+{% load i18n %}
 
-<div class="inner-center-column">
-    <div id="changelist" class="module filtered">
-        <div class="toolbar-content clearfix">
-            <div id="toolbar" class="clearfix">
-                <form id="changelist-search" class="form-inline" method="post" action="{% url "admin:index" %}">
-                    {% csrf_token %}
-                    <div class="search-container">
-                        <span class="search-filters z_admin_200">
-                            {# Include the hidden fields #}
-                            {% for hidden in form.hidden_fields %}
-                            {{ hidden }}
-                            {% endfor %}
-                            {# Include the visible fields #}
-                            {% for field in form.visible_fields %}
-                                {{ field.errors }}
-                                {{ field.label_tag }} {{ field }}
-                            {% endfor %}
-                        </span>
-                        <input class="btn btn-info" type="submit" value="{% trans "Display" %}"/>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<script>
+$(function () { 
+
+    {% include "admin/dashboard/includes/_highchart_theme.js" %}
+
+    // #########################################################################
+    $('#dash_chart').highcharts({
+        chart: {
+            //type: 'bar'
+        },
+        title: {
+            text: '{% trans "DashBoard" %}'
+        },
+        xAxis: {
+            categories: [
+                {% for res in results %} '{{ res.month_name }}', {% endfor %}
+            ]
+        },
+        yAxis: {
+            title: {
+                text: '{% trans "Amount" %}'
+            }
+        },
+            labels: {
+                items: [{
+                    html: '{% trans "Total Breakdown" %}',
+                    style: {
+                        left: '40px',
+                        top: '8px',
+                        color: 'black'
+                    }
+                }]
+            },
+        series: [{
+            type: 'column',
+            name: '{% trans "Earnings" %}',
+            data: [ {% for res in results %} {{ res.amount_earning }}, {% endfor %} ],
+            color: '#69CD4B'
+        }, {
+            type: 'column',
+            name: '{% trans "Spendings" %}',
+            data: [ {% for res in results %} {{ res.amount_spending }}, {% endfor %} ],
+            color: '#FF6F34'
+        }, {
+                type: 'pie',
+                name: '{% trans "Total Breakdown" %}',
+                data: [{
+                    name: '{% trans "Earnings" %}',
+                    y: {{ total_earning }},
+                    color: '#69CD4B'
+                }, {
+                    name: '{% trans "Spendings" %}',
+                    y: {{ total_spending }},
+                    color: '#FF6F34'
+                }],
+                center: [100, 80],
+                size: 100,
+                showInLegend: false,
+                dataLabels: {
+                    enabled: false
+                }
+            }
+        ]
+    });
+});
+</script>
+
+
 <div class="results">
-    <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
-        <thead>
-            <tr>
-                <th class="name-column" scope="col">
-                    <div class="text">TTTT</div>
-                </th>
-            </tr>
-        </thead>
-    </table>
+    <div id="dash_chart" style="width:100%; height:400px;"></div>
+
+    {#{% for res in results %}#}
+    {#<p> {{ res.month_name }} - {{ res.amount_earning }} - {{ res.amount_spending }}</p>#}
+    {#{% endfor %}#}
 </div>
+<br/><br/>
