ansible ini file.

--- a/deploy/ansible/roles/app/templates/config_vagrant.ini.j2
+++ b/deploy/ansible/roles/app/templates/config_vagrant.ini.j2
@@ -1,23 +1,23 @@
 [main]
 DEVELOP = false
-ALLOWED_HOSTS = 127.0.0.1
+ALLOWED_HOSTS_ = 127.0.0.1
 STATIC_ROOT = 'staticfiles'
 STATIC_URL = '/static/'
-MEDIA_ROOT = /app/assets/uploads
+MEDIA_ROOT = /opt/aert/www-webfolder/uploads
 MEDIA_URL = http://127.0.0.1/media/
 
 [database]
-DATABASE_USER = bla
-DATABASE_PASSWORD = XXXXXXXX
-DATABASE_HOST = dev
-DATABASE_PORT =
-DATABASE_ENGINE = sqlite
-DATABASE_NAME = blo
-TESTSUITE_DATABASE_NAME = test_blo
+DATABASE_USER_ =
+DATABASE_PASSWORD_ = 
+DATABASE_HOST_ = 
+DATABASE_PORT_ =
+DATABASE_ENGINE_ =
+DATABASE_NAME_ = 
+TEST_DATABASE_NAME_ = 
 
 [secrets]
-SECRET_KEY = random-string-of-ascii
-CSRF_MIDDLEWARE_SECRET = random-string-of-ascii
+SECRET_KEY = 
+CSRF_MIDDLEWARE_SECRET = 
 
 [cookies]
 SESSION_COOKIE_DOMAIN =
@@ -28,7 +28,7 @@ SESSION_COOKIE_DOMAIN =
 DEBUG = false
 TEMPLATE_DEBUG = false
 VIEW_TEST = false
-INTERNAL_IPS = 
+INTERNAL_IPS_ = 
 SKIP_CSRF_MIDDLEWARE = false
 
 [email]
