footer + adress student.

--- a/assets/association/templates/admin/base_site.html
+++ b/assets/association/templates/admin/base_site.html
@@ -22,7 +22,7 @@
 
 {# Footer links (left side) #}
 {% block footer_links %}
-  <a href="https://github.com/aert/assets" target="_blank" class="icon"><i class="icon-question-sign"></i>Sources 8-D</a>
+  <a href="https://github.com/aert/assets" target="_blank" class="icon"><i class="icon-question-sign"></i>Support</a>
 {% endblock %}
 
 {# Additional header content like notifications or language switcher #}
