--- a/deploy/ansible/roles/app_assets/templates/Makefile.j2
+++ b/deploy/ansible/roles/app_assets/templates/Makefile.j2
@@ -9,10 +9,10 @@ syncdb:
 
 collect:
 	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets collectstatic --noinput;
-	chown -R www-data:www-data ${app_public}
+	chown -R www-data:www-data {{ app_public }}
 
 loaddata:
-	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata ${app_fixtures}/initial_data_auth.yaml
-	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata ${app_fixtures}/initial_data_students.yaml
-	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata ${app_fixtures}/initial_data_earnings.yaml
-	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata ${app_fixtures}/initial_data_spendings.yaml
+	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_auth.yaml
+	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_students.yaml
+	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_earnings.yaml
+	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_spendings.yaml
