--- a/deploy/ansible/roles/app_assets/templates/config_vagrant.ini.j2
+++ b/deploy/ansible/roles/app_assets/templates/config_vagrant.ini.j2
@@ -1,5 +1,6 @@
 [main]
 DEVELOP = false
+LOG_DIR = {{ app_log }}
 ALLOWED_HOSTS_ = asso.abdourakhmane.net
 STATIC_ROOT = {{ app_assets }}/
 STATIC_URL = /static/
