Corrected allowed_host.

--- a/deploy/ansible/roles/app_assets/templates/config_vagrant.ini.j2
+++ b/deploy/ansible/roles/app_assets/templates/config_vagrant.ini.j2
@@ -1,7 +1,7 @@
 [main]
 DEVELOP = false
 LOG_DIR = {{ app_log }}
-ALLOWED_HOSTS_ = asso.abdourakhmane.net
+ALLOWED_HOSTS_ = {{ app_servername }}
 STATIC_ROOT = {{ app_assets }}/
 STATIC_URL = /static/
 MEDIA_ROOT = {{ app_uploads }}
