--- a/deploy/ansible/roles/app_assets/templates/config.ini.j2
+++ b/deploy/ansible/roles/app_assets/templates/config.ini.j2
@@ -33,14 +33,14 @@ INTERNAL_IPS_ =
 SKIP_CSRF_MIDDLEWARE = false
 
 [email]
-SERVER_EMAIL = assets@abdourakhmane.net
+SERVER_EMAIL = assets@localhost
 EMAIL_HOST = localhost
 
 # the [admins] and [managers] sections are special. Just add lines with
 #  full name = email_address@domain.xx
 # each section must be present but may be empty.
 [admins]
-AERT = dev.aert@gmail.com
+#Admin = admin@localhost
 
 [managers]
-AERT = dev.aert@gmail.com
+#Admin = admin@localhost
