--- a/deploy/ansible/roles/app_assets/templates/Makefile.j2
+++ b/deploy/ansible/roles/app_assets/templates/Makefile.j2
@@ -16,3 +16,4 @@ loaddata:
 	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_students.yaml
 	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_earnings.yaml
 	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_spendings.yaml
+	. $(VENV)/bin/activate; export APP_CONFIG_ASSETS=$(CONF); aert-assets loaddata {{ app_fixtures }}/initial_data_invoices.yaml
