--- a/assets/association/templates/admin/base_site.html
+++ b/assets/association/templates/admin/base_site.html
@@ -18,6 +18,8 @@
 {% block extrajs %}
   {% tracking_code %}
   <script type="text/javascript" src="{% static 'javascript/highcharts.js' %}"></script>
+  <script type="text/javascript" src="{% static 'javascript/highcharts-more.js' %}"></script>
+  <script type="text/javascript" src="{% static 'javascript/gray.js' %}"></script>
 {% endblock %}
 
 
