--- a/assets/association/templates/admin/base_site.html
+++ b/assets/association/templates/admin/base_site.html
@@ -4,8 +4,10 @@
 {% load assets_tags %}
 
 {# Additional <head> content here, some extra meta tags or favicon #}
-{#{% block extrahead %}#}
-{#{% endblock %}#}
+{% block extrahead %}
+<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
+<link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
+{% endblock %}
 
 
 {# Additional CSS includes #}
