Changing extensions to html.

--- a/assets/association/templates/admin/dashboard/includes/_welcome_dashboard.html
+++ b/assets/association/templates/admin/dashboard/includes/_welcome_dashboard.html
@@ -5,11 +5,11 @@
 <script>
 $(function () { 
 
-    {% include "admin/dashboard/includes/_highchart_theme.js" %}
+    {% include "admin/dashboard/includes/_highchart_theme.js.html" %}
 
     // Charts
-    {% include "admin/dashboard/includes/_welcome_dashboard_main.js" %}
-    {% include "admin/dashboard/includes/_welcome_dashboard_pies.js" %}
+    {% include "admin/dashboard/includes/_welcome_dashboard_main.js.html" %}
+    {% include "admin/dashboard/includes/_welcome_dashboard_pies.js.html" %}
 
 });
 </script>
