--- a/assets/association/templates/admin/base_site.html
+++ b/assets/association/templates/admin/base_site.html
@@ -56,5 +56,5 @@
 
 {# Footer copyright (right side) #}
 {% block copyright %}
-  Copyright &copy; 2013<br>Developed by <a href="http://www.abdourakhmane.net" target="_blank">Abdourakhmane</a> 
+  Copyright &copy; 2014<br>Developed by <a href="http://www.aert.fr" target="_blank">Abdourakhmane</a> 
 {% endblock %}
